# wolf

./: CHANGELOG.md  Makefile  README.md  main.c  rhino.cabal  wolf.c
.github/workflows/: build.yml  linter.yml  tests.yml  wolf.yml
app/: Args.hs  Engine.hs  Main.hs  Parser.hs  Types.hs
src/: Emitter.hs  Engine.hs  Parser.hs  Types.hs
test/: EmitterTests.hs  ParserTests.hs  Tests.hs
